<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="notification_download_complete">Download complete</string>
    <string name="notification_download_failed">Download unsuccessful</string>
    <string name="state_unknown">Starting...</string>
    <string name="state_idle">Waiting for download to start</string>
    <string name="state_fetching_url">Looking for resources to download</string>
    <string name="state_connecting">Connecting to the download server</string>
    <string name="state_downloading">Downloading resources</string>
    <string name="state_completed">Download finished</string>
    <string name="state_paused_network_unavailable">Download paused because no network is available</string>
    <string name="state_paused_network_setup_failure">Download paused. Test a website in browser</string>
    <string name="state_paused_by_request">Download paused</string>
    <string name="state_paused_wifi_unavailable">Download paused because wifi is unavailable</string>
    <string name="state_paused_wifi_disabled">Download paused because wifi is disabled</string>
    <string name="state_paused_roaming">Download paused because you are roaming</string>
    <string name="state_paused_sdcard_unavailable">Download paused because the external storage is unavailable</string>
    <string name="state_failed_unlicensed">Download failed because you may not have purchased this app</string>
    <string name="state_failed_fetching_url">Download failed because the resources could not be found</string>
    <string name="state_failed_sdcard_full">Download failed because the external storage is full</string>
    <string name="state_failed_cancelled">Download cancelled</string>
    <string name="state_failed">Download failed</string>
    <string name="kilobytes_per_second">%1$s KB/s</string>
    <string name="time_remaining">Time remaining: %1$s</string>
    <string name="time_remaining_notification">%1$s left</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="mobilegames_pcenter_notice_6">Customer Service Center</string>
    <string name="mobilegames_customer_notice1">Solving</string>
    <string name="mobilegames_customer_notice2">Closed</string>
    <string name="mobilegames_common_more">More</string>
    <string name="mobilegames_customer_notice3">Our customer service will answer your question soon</string>
    <string name="mobilegames_customer_notice5">No information</string>
    <string name="mobilegames_customer_notice6">Next</string>
    <string name="mobilegames_customer_notice7">Close</string>
    <string name="mobilegames_customer_notice4">Details</string>
    <string name="mobilegames_customer_notice8">Question Type</string>
    <string name="mobilegames_customer_notice9">Picture</string>
    <string name="mobilegames_customer_notice11">Send</string>
    <string name="mobilegames_customer_notice10">Local Pictures</string>
    <string name="mobilegames_customer_notice12">Preview</string>
    <string name="mobilegames_login_notice_addpersonalinfo">"For the safety of your account, you'd better complete your profile so that it will be more likely to get back your account in case you lost it."</string>
    <string name="mobilegames_pcenter_notice_7">Account Data</string>
    <string name="mobilegames_head_title_customer">Problem Record</string>
    <string name="mobilegames_customer_notice13">Me</string>
    <string name="mobilegames_customer_notice14">None Available</string>
    <string name="mobilegames_login_forgetpw_text">I forgot my password</string>
    <string name="mobilegames_head_title_register">Create an Oasis Games account</string>
    <string name="mobilegames_login_hint_username">Please enter account name</string>
    <string name="mobilegames_login_hint_password">Please enter password</string>
    <string name="mobilegames_login_username_notice_error_length">Account name should be between 6 and 50 characters</string>
    <string name="mobilegames_login_username_notice_error1">Pure numbers could not be used as account name</string>
    <string name="mobilegames_login_password_notice_error2">&amp; or # should not be contained in passwords</string>
    <string name="mobilegames_login_rule_notice2">User Agreement</string>
    <string name="mobilegames_bind_btn_regist">Accept the agreement and Register</string>
    <string name="mobilegames_bind_btn_userrule">Read User Agreement</string>
    <string name="mobilegames_common_btn_sure">OK</string>
    <string name="mobilegames_bind_success">Congratulations! You have successfully registered. You can use OASIS to login to games.</string>
    <string name="mobilegames_login_result_1">Login Successful</string>
    <string name="mobilegames_bind_togame">Continue</string>
    <string name="mobilegames_head_title_changeuser">Switch Account</string>
    <string name="mobilegames_login_notice_changeuser">Current character will be covered by account switching, please be aware of it.</string>
    <string name="mobilegames_login_button_changeuser_suer">OK</string>
    <string name="mobilegames_login_button_changeuser_toregist">Register</string>
    <string name="mobilegames_login_notice_2">It will login to the account you switched to automatically next time. Please choose a login mode.</string>
    <string name="mobilegames_head_title_changeuser_oas">Switch Oasis Games account</string>
    <string name="mobilegames_login_button_registnewuser">Create a new account</string>
    <string name="mobilegames_login_notice_autologin_fail">Login failed, please login again</string>
    <string name="mobilegames_login_notice_autologin_fail_btn">Login Now</string>
    <string name="mobilegames_pay_notice_no">Mobile payment service is not available in your region</string>
    <string name="mobilegames_pay_notice_null">Please choose a package</string>
    <string name="mobilegames_pay_btn">Pay Now</string>
    <string name="mobilegames_scan_text1">Instructions</string>
    <string name="mobilegames_scan_text2_1">Please open it in a PC browser</string>
    <string name="mobilegames_scan_text2_2">Place the QR code inside the viewfinder rectangle to scan it</string>
    <string name="mobilegames_scan_success">Successfully scanned. Please complete recharge on PC</string>
    <string name="mobilegames_login_notice_autologin_exception">Network problem, please try again later</string>
    <string name="mobilegames_login_notice_autologin_exception_btn">Retry Now</string>
    <string name="mobilegames_login_notice_1">Welcome</string>
    <string name="mobilegames_publickey_not_init">"Public KEY hasn't been initialized yet"</string>
    <string name="mobilegames_paykey_not_init">"Pay KEY hasn't been initialized yet"</string>
    <string name="mobilegames_login_btn_submit">Login</string>
    <string name="mobilegames_bind_notice_connectto">Associate to</string>
    <string name="mobilegames_login_username_text">Account Name</string>
    <string name="mobilegames_login_username_text2">Email</string>
    <string name="mobilegames_login_remenberpw_text">Remember Password</string>
    <string name="mobilegames_pay_history_1">Payment amount</string>
    <string name="mobilegames_pay_history_2">Item obtained</string>
    <string name="mobilegames_pay_history_3">Recharge time</string>
    <string name="mobilegames_pay_history_4">You have no recharge records</string>
    <string name="mobilegames_common_imageview_disctiption">ImageView Description</string>
</resources>