<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@color/mobilegames_color_bg_227_227_227" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <include layout="@layout/mobilegames_common_layout_head" />
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="40.0dip">
            <TextView android:textSize="24.0sp" android:textColor="@color/mobilegames_color_font_FFFFFF" android:gravity="center" android:id="@id/mobilegames_customer_service_list_func_ing" android:background="@drawable/mobilegames_common_tab_bg_focus" android:clickable="true" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/mobilegames_customer_notice1" android:layout_weight="1.0" android:onClick="funcClickIng" />
            <TextView android:textSize="24.0sp" android:textColor="@color/mobilegames_color_font_666666" android:gravity="center" android:id="@id/mobilegames_customer_service_list_func_ed" android:background="@drawable/mobilegames_common_tab_bg_unfocus" android:clickable="true" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/mobilegames_customer_notice2" android:layout_weight="1.0" android:onClick="funcClickEd" />
        </LinearLayout>
        <ListView android:id="@id/mobilegames_customer_service_list_question" android:background="@drawable/mobilegames_common_box_grey" android:fadingEdge="none" android:fadingEdgeLength="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="20.0dip" android:listSelector="@drawable/mobilegames_common_list_item_selector" android:divider="@color/mobilegames_color_list_divider_d1d1d1" android:dividerHeight="1.0dip" />
    </LinearLayout>
    <TextView android:textSize="24.0sp" android:textColor="@color/mobilegames_color_font_666666" android:gravity="center" android:id="@id/mobilegames_customer_service_list_empty" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="50.0dip" android:text="@string/mobilegames_customer_notice5" />
    <com.mopub.volley.toolbox.NetworkImageView android:id="@id/mobilegames_customer_service_list_item_img_details" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerInside" android:contentDescription="@string/mobilegames_common_imageview_disctiption" />
</merge>
