<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@color/mobilegames_color_bg_227_227_227" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/mobilegames_common_layout_head" />
    <LinearLayout android:orientation="vertical" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <include layout="@layout/mobilegames_pcenter_userinfo" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/mobilegames_pay_history_data" android:background="@drawable/mobilegames_common_box_white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="horizontal" android:background="@color/mobilegames_color_bg_eaeaea" android:layout_width="fill_parent" android:layout_height="45.0dip">
                    <TextView android:textSize="18.0sp" android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/mobilegames_pay_history_1" android:layout_weight="1.0" style="@style/mobilegames_text_style_bule00aed9" />
                    <TextView android:textSize="18.0sp" android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/mobilegames_pay_history_2" android:layout_weight="1.0" style="@style/mobilegames_text_style_bule00aed9" />
                    <TextView android:textSize="18.0sp" android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/mobilegames_pay_history_3" android:layout_weight="1.0" style="@style/mobilegames_text_style_bule00aed9" />
                </LinearLayout>
                <TextView android:background="@color/mobilegames_color_list_divider_d1d1d1" android:layout_width="fill_parent" android:layout_height="2.0dip" />
            </LinearLayout>
            <ListView android:orientation="vertical" android:id="@id/mobilegames_pay_history_list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:listSelector="#00000000" android:divider="@color/mobilegames_color_list_divider_d1d1d1" android:dividerHeight="2.0dip" />
        </LinearLayout>
        <TextView android:textSize="18.0sp" android:gravity="center_horizontal" android:id="@id/mobilegames_pay_history_nodata" android:paddingTop="80.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="20.0dip" android:text="@string/mobilegames_pay_history_4" style="@style/mobilegames_text_style_black9f9f9f" />
    </LinearLayout>
</LinearLayout>
