<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/mobilegames_color_bg_227_227_227" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center|left|top" android:orientation="vertical" android:id="@id/mobilegames_login_style_selector_notice_layout" android:background="@drawable/mobilegames_common_bg_209_209_209" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/mobilegames_dimen_login_notice_height" android:layout_marginLeft="@dimen/mobilegames_dimen_login_notice_margin" android:layout_marginTop="@dimen/mobilegames_dimen_login_notice_margin" android:layout_marginRight="@dimen/mobilegames_dimen_login_notice_margin" android:layout_alignParentTop="true">
        <TextView android:textColor="@color/mobilegames_color_font_666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mobilegames_login_notice_1" />
        <TextView android:textColor="@color/mobilegames_color_font_666666" android:id="@id/mobilegames_login_style_selector_notice_layout_text" android:paddingLeft="18.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mobilegames_login_notice_2" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:id="@id/mobilegames_login_style_selector_type" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/mobilegames_dimen_login_notice_margin" android:layout_below="@id/mobilegames_login_style_selector_notice_layout">
        <Button android:orientation="horizontal" android:id="@id/mobilegames_login_style_selector_facebook" android:background="@drawable/mobilegames_login_button_facebook" android:layout_width="@dimen/mobilegames_dimen_login_textview_wh" android:layout_height="@dimen/mobilegames_dimen_login_textview_wh" android:layout_marginRight="25.0dip" />
        <Button android:id="@id/mobilegames_login_style_selector_submit" android:background="@drawable/mobilegames_login_button_oas" android:layout_width="@dimen/mobilegames_dimen_login_textview_wh" android:layout_height="@dimen/mobilegames_dimen_login_textview_wh" android:layout_marginLeft="25.0dip" android:layout_marginRight="25.0dip" android:onClick="buttonOnClick" />
        <Button android:id="@id/mobilegames_login_style_selector_google" android:background="@drawable/mobilegames_login_button_google" android:layout_width="@dimen/mobilegames_dimen_login_textview_wh" android:layout_height="@dimen/mobilegames_dimen_login_textview_wh" android:layout_marginLeft="25.0dip" android:onClick="buttonOnClick" />
    </LinearLayout>
    <TextView android:textSize="@dimen/mobilegames_dimen_common_button_font_size_24" android:textColor="@color/mobilegames_color_font_666666" android:gravity="right" android:id="@id/mobilegames_login_style_selector_regist" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/mobilegames_dimen_login_notice_margin" android:minWidth="80.0dip" android:text="@string/mobilegames_login_button_registnewuser" android:layout_below="@id/mobilegames_login_style_selector_type" android:layout_alignParentRight="true" />
</RelativeLayout>
