<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:orientation="vertical" android:background="@color/mobilegames_color_bg_227_227_227" android:paddingTop="@dimen/mobilegames_dimen_login_notice_margin" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerHorizontal="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_gravity="center_horizontal" android:layout_width="@dimen/mobilegames_dimen_login_input_wh" android:layout_height="wrap_content">
        <EditText android:textSize="14.0sp" android:textColor="@color/mobilegames_color_font_9f9f9f" android:id="@id/mobilegames_login_login_view_username" android:background="@drawable/mobilegames_common_input_bg_username_selector" android:paddingLeft="@dimen/mobilegames_dimen_login_input_padding_40" android:paddingRight="80.0dip" android:layout_width="@dimen/mobilegames_dimen_login_input_wh" android:layout_height="wrap_content" android:hint="@string/mobilegames_login_hint_username" android:singleLine="true" android:maxLength="50" android:inputType="text" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true">
            <LinearLayout android:gravity="center" android:id="@id/mobilegames_login_login_view_usernames_clean" android:layout_width="40.0dip" android:layout_height="wrap_content" android:minHeight="36.0dip">
                <TextView android:id="@id/mobilegames_login_login_view_usernames_clean_img" android:background="@drawable/mobilegames_common_input_bg_clean_selector" android:layout_width="@dimen/mobilegames_dimen_login_input_closebtn_wh" android:layout_height="@dimen/mobilegames_dimen_login_input_closebtn_wh" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:id="@id/mobilegames_login_login_view_usernames" android:layout_width="40.0dip" android:layout_height="wrap_content" android:minHeight="36.0dip">
                <TextView android:gravity="center" android:id="@id/mobilegames_login_login_view_usernames_flag" android:background="@drawable/mobilegames_common_flag_down" android:layout_width="18.0dip" android:layout_height="10.0dip" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout android:layout_width="@dimen/mobilegames_dimen_login_input_wh" android:layout_height="wrap_content" android:layout_marginTop="@dimen/mobilegames_dimen_login_notice_margin">
        <EditText android:textSize="14.0sp" android:textColor="@color/mobilegames_color_font_9f9f9f" android:id="@id/mobilegames_login_login_view_password" android:background="@drawable/mobilegames_common_input_bg_password_selector" android:paddingLeft="@dimen/mobilegames_dimen_login_input_padding_40" android:layout_width="@dimen/mobilegames_dimen_login_input_wh" android:layout_height="wrap_content" android:hint="@string/mobilegames_login_hint_password" android:singleLine="true" android:maxLength="20" android:inputType="textPassword" />
        <LinearLayout android:gravity="center" android:id="@id/mobilegames_login_login_view_password_clean" android:layout_width="40.0dip" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true">
            <TextView android:id="@id/mobilegames_login_login_view_password_clean_img" android:background="@drawable/mobilegames_common_input_bg_clean_selector" android:layout_width="@dimen/mobilegames_dimen_login_input_closebtn_wh" android:layout_height="@dimen/mobilegames_dimen_login_input_closebtn_wh" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="@dimen/mobilegames_dimen_login_input_wh" android:layout_height="wrap_content" android:layout_marginTop="@dimen/mobilegames_dimen_login_notice_margin">
        <TextView android:textSize="18.0sp" android:textColor="@color/mobilegames_color_font_666666" android:gravity="center|right" android:id="@id/mobilegames_login_login_view_forgotpw" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="onClickForgetpw" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/mobilegames_dimen_login_notice_margin">
        <TextView android:gravity="center|right" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="7.0" />
        <RelativeLayout android:paddingRight="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="3.0">
            <CheckBox android:id="@id/mobilegames_login_login_view_remenberpw" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/mobilegames_login_remenberpw_text" style="@style/mobilegames_checkbox_style" />
        </RelativeLayout>
    </LinearLayout>
    <TextView android:textSize="@dimen/mobilegames_dimen_common_button_font_size_24" android:textColor="@color/mobilegames_color_font_FFFFFF" android:gravity="center" android:id="@id/mobilegames_login_login_view_submit" android:background="@drawable/mobilegames_common_00aed9_017baa" android:layout_width="@dimen/mobilegames_dimen_login_input_wh" android:layout_height="@dimen/mobilegames_dimen_login_button_height" android:layout_marginTop="@dimen/mobilegames_dimen_login_notice_margin" android:text="@string/mobilegames_login_btn_submit" android:onClick="buttonOnClick" />
</LinearLayout>
